--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
+    "connect-mongo": "^5.0.0",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "express-socket.io-session": "^1.3.5",
+    "method-override": "^3.0.0",
     "mongoose": "^7.4.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "postcss-cli": "^10.1.0",
     "sass": "^1.66.1",
     "socket.io": "^4.7.2"
